@@ -132,6 +132,7 @@ opt.--force-plugins=force plugin (re)installation.
 opt.--force-pull=force pull of settings even for code repository.
 opt.--force-repositories=force setup of repositories to even clone inactive and pull existing ones.
 opt.--locale=the locale (e.g. '--locale=de' for German language).
+opt.--no-colors=disable colored log messages.
 opt.--offline=enable offline mode (skip updates or git pull, fail downloads or git clone).
 opt.--privacy=enable GDPR-compliant console output.
 opt.--quiet=disable info logging (only log success, warning or error).
