@@ -132,6 +132,7 @@ opt.--force-plugins=Erzwingt die (Re)Installation von Plugins.
 opt.--force-pull=Erzwingt einen Pull der settings auch im Fall eines Code-Repositories.
 opt.--force-repositories=Erzwingt das Setup von Repositories um auch Inaktive zu clonen oder Existierende zu pullen.
 opt.--locale=Die Spracheinstellungen (z.B. '--locale=en' für Englisch).
+opt.--no-colors=Deaktiviert farbige Log-Meldungen.
 opt.--offline=Aktiviert den Offline-Modus (Überspringt Aktualisierungen oder git pull, schlägt fehl bei Downloads or git clone).
 opt.--privacy=Aktiviert DSGVO konforme Konsolenausgaben.
 opt.--quiet=Deaktiviert Info Logging ( nur success, warning und error).
